chore(repo): keep mailbox history, ignore runtime artifacts
- track logs/agent-mailbox\n- ignore non-mailbox logs and cache\n- ignore workspace snapshots but keep workspaces/.gitkeep\n- add dellannaluca Claude Code tips note

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,13 @@ node_modules/
 
 # Logs
 app/logs/
+logs/*
+!logs/agent-mailbox/
+!logs/agent-mailbox/**
+
+# Runtime cache
+cache/
+
+# Local workspace snapshots/artifacts
+workspaces/*
+!workspaces/.gitkeep
