🐱 feat(scramble): E006-F01 ScrambleView — ASCII cat TUI presence
tl;dr — Scramble the symbient cat now lives in the TUI. ASCII art cat
with speech bubbles, 3 poses, F8 toggle, timer-driven idle behaviour.

## What
- TScrambleView: TView subclass rendering ASCII cat + speech bubble
- TScrambleWindow: minimal-chrome wrapper (no close/zoom buttons, non-selectable)
- 3 cat poses: Default (sitting), Sleeping (curled), Curious (looking up)
- Speech bubble: box-drawing border, word-wrap, tail connector, auto-fade (5s)
- Cat anchored to bottom of view — bubble grows upward, no layout jump on fade
- Timer-based idle pose rotation (10-20s for testing, configurable)

## How to drive
- F8 or Menu → View → Scramble Cat: toggle show/hide
- open_scramble command in registry: toggle via IPC/API
- Cat appears bottom-right corner, behind other windows
- Idle: cycles Default → Sleeping → Curious with speech on each change
- say() method for programmatic speech (future: engine integration)

## Files
- NEW: app/scramble_view.h, app/scramble_view.cpp
- MOD: app/test_pattern_app.cpp (include, cmScrambleCat=180, toggle, menu, F8, statusline)
- MOD: app/CMakeLists.txt (add scramble_view.cpp)
- MOD: app/command_registry.cpp (open_scramble capability + dispatch)
- MOD: app/command_registry_test.cpp (stub + test token)

## Verified
- cmake build clean, ctest passes (command_registry)
- F8 toggle works (show/hide confirmed)
- All 3 poses render without artifacts
- Bubble appears on show, fades after 5s, cat stays anchored
- Cat stays behind other windows (non-selectable)

E006 #55

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable(test_pattern
     transparent_text_view.cpp
     ansi_view.cpp
     wibwob_scroll_test.cpp
+    scramble_view.cpp
 )
 target_link_libraries(test_pattern PRIVATE tvision)
 
