feat(scramble): E006-F02/F03 knowledge base + haiku brain
tl;dr — ScrambleEngine: keyword KB from local docs (F02) + Haiku LLM
client for open questions (F03). KB answers system questions without
API calls. Haiku handles creative/open questions in Scramble voice.

F02 Knowledge Base:
- ScrambleKnowledgeBase: keyword-to-response index
- Categories: build, run, architecture, commands, identity, api, llm,
  modules, views, wibwob — all pre-formatted in Scramble voice
- Command registry integration (loads capability names)
- 15 idle observation quips (kaomoji, deadpan, cat behaviour)
- Tokenise + score matching for query routing

F03 Haiku Brain:
- ScrambleHaikuClient: curl-based sync calls to Anthropic API
- Model: claude-haiku-4-5-20251001, 200 token budget
- Rate limit: max 1 call per 30 seconds
- System prompt: compressed Scramble personality canon
- Fallback: empty response if no API key (KB takes over)
- Reads ANTHROPIC_API_KEY from env

Integration:
- ScrambleEngine orchestrates KB-first, Haiku-fallback query routing
- Voice filter: lowercase, kaomoji signoff enforcement
- ScrambleView.setEngine() wires engine for idle observations
- Idle pose changes now source quips from engine pool
- App constructor inits engine with project root

Also:
- CLAUDE.md: added no-emoji-in-commits rule
- 25 ctest assertions in scramble_engine_test (all pass)

Verified: cmake build clean, both ctests pass (command_registry +
scramble_engine), idle observations from engine confirmed.

E006 #55

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -50,6 +50,7 @@ add_executable(test_pattern
     ansi_view.cpp
     wibwob_scroll_test.cpp
     scramble_view.cpp
+    scramble_engine.cpp
 )
 target_link_libraries(test_pattern PRIVATE tvision)
 
@@ -106,3 +107,12 @@ add_executable(command_registry_test
 )
 
 add_test(NAME command_registry COMMAND command_registry_test)
+
+# scramble_engine_test (KB queries, rate limiter, engine integration)
+add_executable(scramble_engine_test
+    scramble_engine_test.cpp
+    scramble_engine.cpp
+    command_registry.cpp
+)
+
+add_test(NAME scramble_engine COMMAND scramble_engine_test)
