--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -60,6 +60,7 @@ add_executable(test_pattern
     paint/paint_tools.cpp
     paint/paint_window.cpp
     micropolis_ascii_view.cpp
+    micropolis_tool_palette.cpp
 )
 target_include_directories(test_pattern PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(test_pattern PRIVATE tvision)
