--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -59,6 +59,8 @@ add_executable(test_pattern
     paint/paint_status.cpp
     paint/paint_tools.cpp
     paint/paint_window.cpp
+    micropolis_ascii_view.cpp
+    micropolis_tool_palette.cpp
 )
 target_include_directories(test_pattern PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(test_pattern PRIVATE tvision)
@@ -133,3 +135,41 @@ add_executable(scramble_engine_test
 )
 
 add_test(NAME scramble_engine COMMAND scramble_engine_test)
+
+# Micropolis native Stage-0 integration (no wasm/embind glue)
+file(GLOB MICROPOLIS_ENGINE_SRCS
+    ${CMAKE_SOURCE_DIR}/vendor/MicropolisCore/MicropolisEngine/src/*.cpp
+)
+list(FILTER MICROPOLIS_ENGINE_SRCS EXCLUDE REGEX ".*emscripten\\.cpp$")
+
+add_library(micropolis_native STATIC
+    ${MICROPOLIS_ENGINE_SRCS}
+)
+target_include_directories(micropolis_native PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/micropolis/compat
+    ${CMAKE_SOURCE_DIR}/vendor/MicropolisCore/MicropolisEngine/src
+)
+
+add_library(micropolis_bridge STATIC
+    micropolis/micropolis_bridge.cpp
+)
+target_include_directories(micropolis_bridge PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/micropolis
+)
+target_link_libraries(micropolis_bridge PUBLIC micropolis_native)
+
+add_executable(micropolis_determinism_test
+    micropolis_determinism_test.cpp
+)
+target_link_libraries(micropolis_determinism_test PRIVATE micropolis_bridge)
+add_test(NAME micropolis_determinism COMMAND micropolis_determinism_test)
+
+add_executable(micropolis_no_ansi_test
+    micropolis_no_ansi_test.cpp
+)
+target_link_libraries(micropolis_no_ansi_test PRIVATE micropolis_bridge)
+add_test(NAME micropolis_no_ansi COMMAND micropolis_no_ansi_test)
+
+# Main app can open the Micropolis ASCII MVP window.
+target_link_libraries(test_pattern PRIVATE micropolis_bridge)
