--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/SimHacker/MicropolisCore
 [submodule "vendor/tvterm"]
 	path = vendor/tvterm
-	url = https://github.com/magiblot/tvterm.git
+	url = https://github.com/j-greig/tvterm.git
