feat(ui): add Applications folder browser — Finder-style app launcher (#78)
macOS Finder-style Applications window with:
- Category tabs: All, Games, Tools, Creative, Demos
- Icon grid with name + description per app
- Keyboard nav (arrows, Enter to launch) + mouse click/double-click
- 16 apps registered: 5 games, 3 tools, 2 creative, 6 demos
- API command: open_apps
- View menu: Applications item

Part of E011 Desktop Shell epic.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -42,6 +42,7 @@ add_executable(test_pattern
     snake_view.cpp
     rogue_view.cpp
     deep_signal_view.cpp
+    app_launcher_view.cpp
     generative_verse_view.cpp
     generative_orbit_view.cpp
     generative_mycelium_view.cpp
