--- a/app/llm/config/llm_config.json
+++ b/app/llm/config/llm_config.json
@@ -3,15 +3,23 @@
   "providers": {
     "claude_code_sdk": {
       "enabled": true,
-      "model": "claude-sonnet-4-5",
+      "model": "claude-sonnet-4-6",
       "maxTurns": 50,
-      "allowedTools": ["Read", "Write", "Grep", "Bash", "LS", "WebSearch", "WebFetch"],
+      "allowedTools": [
+        "Read",
+        "Write",
+        "Grep",
+        "Bash",
+        "LS",
+        "WebSearch",
+        "WebFetch"
+      ],
       "nodeScriptPath": "app/llm/sdk_bridge/claude_sdk_bridge.js",
       "sessionTimeout": 3600
     },
     "anthropic_api": {
       "enabled": true,
-      "model": "claude-sonnet-4-5",
+      "model": "claude-sonnet-4-6",
       "endpoint": "https://api.anthropic.com/v1/messages",
       "apiKeyEnv": "ANTHROPIC_API_KEY",
       "maxTokens": "8000",
@@ -20,7 +28,15 @@
     "claude_code": {
       "enabled": false,
       "command": "claude",
-      "args": ["-p", "--model", "claude-haiku-4-5", "--mcp-config", ".claude/settings.json", "--output-format", "json"]
+      "args": [
+        "-p",
+        "--model",
+        "claude-sonnet-4-6",
+        "--mcp-config",
+        ".claude/settings.json",
+        "--output-format",
+        "json"
+      ]
     },
     "openrouter": {
       "enabled": false,
