spike(llm): unified AuthConfig singleton for all LLM consumers
- SPK-AUTH-01: AuthConfig singleton detects ClaudeCode/ApiKey/NoAuth at startup
- SPK-AUTH-02: WibWobEngine uses AuthConfig instead of multi-provider fallback cascade
- SPK-AUTH-03: ScrambleHaikuClient uses AuthConfig; CLI mode for Claude Code auth
- SPK-AUTH-04: Status line shows LLM ON/LLM KEY/LLM OFF; chat shows auth errors
- SPK-AUTH-05: Delete claude_code_provider, anthropic_api_provider_broken, openrouter;
  remove silent SDK→CLI fallback; clean llm_config.json

All 4 ctests pass. Build clean on arm64 macOS.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -16,10 +16,10 @@ set(TV_COMMON_SOURCES
     theme_manager.cpp
     wibwob_view.cpp
     wibwob_engine.cpp
+    llm/base/auth_config.cpp
     llm/base/llm_config.cpp
     llm/base/llm_provider_factory.cpp
     llm/base/tool_executor.cpp
-    llm/providers/claude_code_provider.cpp
     llm/providers/claude_code_sdk_provider.cpp
     llm/providers/anthropic_api_provider.cpp
     llm/tools/time_tools.cpp
@@ -138,6 +138,7 @@ add_executable(scramble_engine_test
     scramble_engine_test.cpp
     scramble_engine.cpp
     command_registry.cpp
+    llm/base/auth_config.cpp
 )
 
 add_test(NAME scramble_engine COMMAND scramble_engine_test)
